<resources>
    <string name="app_name">Detect Gaz</string>
    <string name="title">Bienvenue</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="validate">Valider</string>
    <string name="birthdayDate">Date de naissance</string>
    <string name="woman">Femme</string>
    <string name="man">Homme</string>

    <string name="username">Nom d\'utilisateur</string>
    <string name="mdp">Mot de passe</string>
    <string name="mdp_confirm">Confirmer le mot de passe</string>
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>

    <string name="qte_gaz">Quantité de gaz : </string>
    <string name="valeur_seuil">Valeur du seuil : </string>
    <string name="modifier_seuil">Modifier le seuil</string>
    <string name="activer_ventilateur">Désactiver le ventilateur</string>

    <string name="seuil_actuel">Seuil actuel : </string>
    <string name="nouveau_seuil">Saisir le nouveau seuil : </string>
    <string name="afficher_mesures">Mesures</string>
    <string name="deconnexion">Deconnexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>