<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.polytech.myapplication.utils.Converter"/>
        <variable
            name="viewModel"
            type="com.polytech.myapplication.viewmodel.SeuilViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PrincipalFragment">

        <TextView
            android:id="@+id/txtGaz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:text="@string/qte_gaz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSeuil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@={Converter.floatToString(viewModel.seuil.valeur)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGaz" />

        <Button
            android:id="@+id/btnModifierSeuil"
            android:layout_width="158dp"
            android:layout_height="54dp"
            android:layout_marginTop="96dp"
            android:text="@string/modifier_seuil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSeuil" />

        <Button
            android:id="@+id/btnActiverVentilateur"
            android:layout_width="155dp"
            android:layout_height="53dp"
            android:layout_marginTop="48dp"
            android:text="@string/activer_ventilateur"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnModifierSeuil" />

        <Button
            android:id="@+id/btnAfficherMesures"
            android:layout_width="155dp"
            android:layout_height="53dp"
            android:layout_marginTop="48dp"
            android:text="@string/afficher_mesures"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnActiverVentilateur" />

        <Button
            android:id="@+id/btnDeconnexion"
            android:layout_width="155dp"
            android:layout_height="53dp"
            android:layout_marginTop="32dp"
            android:text="@string/deconnexion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAfficherMesures" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>